# preoomkiller

./: .gitignore  Cargo.toml  Gemfile  LICENSE  Rakefile  Readme.md
src/: bin.rs  main.rs
test/: preoomkiller_test.rb
test/fixtures/: max.txt  signal_printer.sh
