[package]
name = "preoomkiller"
description = "Softly kills your process with SIGTERM before it runs out of memory."
version = "0.0.1" # modified via `rake bump:patch`
authors = ["Michael Grosser <michael@grosser.it>"]
license = "MIT"
homepage = "https://github.com/grosser/preoomkiller"
exclude = [
    ".gitignore",
    "Gemfile",
    "Gemfile.lock",
    "Rakefile",
    "test/*",
    "target/*"
]
readme = "Readme.md"


[dependencies]
getopts = "*"
regex = "*"
libc = "*"
